fix(sdk-java): Remove method not supporting in Java 17